[metadata]
name = marketplace_hookes_law_app
version = v0.0.1
description = Minimal application to run a simple transformation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/materials-marketplace/hookes-law
author = Pablo de Andres
author_email = pablo.de.andres@iwm.fraunhofer.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    fastapi==0.75.2
    marketplace-standard-app-api~=0.4
    uvicorn<1.0.0
python_requires = >=3.8
